Released 1.2.0